<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".ManualActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="178dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="19dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txt_intromanual"
        android:layout_width="320dp"
        android:layout_height="30dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/txt_intromanual"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/txt_menumanual"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/txt_menumanual"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_intromanual" />

    <TextView
        android:id="@+id/txt_bibliotecamanual"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/txt_bibliotecamanual"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_menumanual" />

    <TextView
        android:id="@+id/txt_cancionmanual"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/txt_cancionmanual"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_bibliotecamanual" />

    <TextView
        android:id="@+id/txt_generomanual"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/txt_generomanual"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_cancionmanual" />

    <TextView
        android:id="@+id/txt_expmanual"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/txt_expmanual"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_generomanual" />

    <Button
        android:id="@+id/btn_volvermanual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="10dp"
        android:onClick="volverMenu"
        android:text="@string/btn_volver"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_expmanual" />

</androidx.constraintlayout.widget.ConstraintLayout>