<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="178dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="19dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/text_genero"
        android:layout_width="304dp"
        android:layout_height="105dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/txt_introapp"
        android:textAlignment="gravity"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/btn_biblioteca"
        android:layout_width="225dp"
        android:layout_height="100dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:onClick="verBiblioteca"
        android:text="@string/btn_biblioteca"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_genero" />

    <Button
        android:id="@+id/btn_cancion"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:onClick="nuevaCancion"
        android:text="@string/btn_cancion"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_biblioteca" />

    <Button
        android:id="@+id/btn_genero"
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:onClick="nuevoGenero"
        android:text="@string/btn_genero"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/btn_cancion"
        app:layout_constraintTop_toBottomOf="@+id/btn_biblioteca" />

    <Button
        android:id="@+id/btn_manual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="144dp"
        android:layout_marginTop="30dp"
        android:onClick="verManual"
        android:text="@string/btn_manual"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_cancion" />

</androidx.constraintlayout.widget.ConstraintLayout>