<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".GeneroActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="178dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="19dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txt_introcancion"
        android:layout_width="320dp"
        android:layout_height="75dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/txt_introgenero"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editxt_genero"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/txt_genero"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/material_dynamic_neutral60"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_introcancion" />

    <ImageView
        android:id="@+id/btn_vozgenero"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/desc_voz"
        android:onClick="reconocimientoVoz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editxt_genero"
        app:srcCompat="@drawable/voz" />

    <Button
        android:id="@+id/btn_guardargenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:onClick="guardarCancion"
        android:text="@string/btn_nuevogenero"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_vozgenero" />

    <Button
        android:id="@+id/btn_volvergenero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="30dp"
        android:onClick="volverMenu"
        android:text="@string/btn_volver"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/btn_guardargenero"
        app:layout_constraintTop_toBottomOf="@+id/btn_vozgenero" />

</androidx.constraintlayout.widget.ConstraintLayout>