<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".BibliotecaActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="350dp"
        android:layout_height="178dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="19dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/txt_introbiblioteca"
        android:layout_width="320dp"
        android:layout_height="75dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/txt_introbiblioteca"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ListView
        android:id="@+id/biblioteca_canciones"
        android:layout_width="350dp"
        android:layout_height="325dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_introbiblioteca" />

    <Button
        android:id="@+id/btn_volverbiblioteca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="20dp"
        android:onClick="volverMenu"
        android:text="@string/btn_volver"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/biblioteca_canciones" />

</androidx.constraintlayout.widget.ConstraintLayout>